Fixed card backgrounds overlapping

--- a/tedx-iisertvm/res/css/style.css
+++ b/tedx-iisertvm/res/css/style.css
@@ -135,7 +135,7 @@
   padding-bottom: 4rem;
   border-radius: 10px!important;
 }
-.cards .row{
+.row{
   background: transparent;
 }
 
